# LeanInteract

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yml  publish-to-pypi.yml  update-changelog.yml
docs/: changelog.md  contributing.md  examples.md  index.md  installation.md  troubleshooting.md  update_changelog.py
docs/api/: config.md  interface.md  server.md  sessioncache.md  utils.md
docs/user-guide/: basic-usage.md  custom-lean-configuration.md  getting-started.md  tactic-mode.md
examples/: beq_plus.py  proof_generation_and_autoformalization.py  type_check.py  utils.py
src/: install_lean.py
src/lean_interact/: __init__.py  config.py  interface.py  server.py  sessioncache.py  utils.py
tests/: test_concurrency.py  test_git_functionality.py  test_server.py  test_utils.py
