[project]
name = "lean-interact"
version = "0.6.3"
description = "LeanInteract is a Python package that allows you to interact with the Lean theorem prover."
keywords = ["Lean", "theorem proving", "autoformalization", "REPL"]
license = { file = "LICENSE" }
readme = "README.md"
authors = [{ name = "Auguste Poiroux", email = "auguste.poiroux@epfl.ch" }]
requires-python = ">=3.10"
dependencies = [
    "filelock>=3.18.0",
    "gitpython>=3.1.44",
    "packaging>=24.2",
    "psutil>=6.1.0",
    "pydantic>=2.11.1",
    "requests>=2.32.3",
    "rich>=13.9.4"
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.10",
    "pymdown-extensions>=10.15",
    "ruff>=0.11.10",
    "mkdocs-execute-plugin>=0.0.8"
]

[project.scripts]
install-lean     = "lean_interact.utils:install_lean"
clear-lean-cache = "lean_interact.utils:clear_cache"
